tests/baselines/reference/FunctionDeclaration8_es6.errors.txt
tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration8_es6.ts(1,12): error TS2552: Cannot find name 'yield'. Did you mean 'eval'?
tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration8_es6.ts(1,20): error TS2552: Cannot find name 'foo'. Did you mean 'v'?


==== tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration8_es6.ts (2 errors) ====
    var v = { [yield]: foo }
               ~~~~~
!!! error TS2552: Cannot find name 'yield'. Did you mean 'eval'?
                       ~~~
!!! error TS2552: Cannot find name 'foo'. Did you mean 'v'?